--- a/src/index.html
+++ b/src/index.html
@@ -2,13 +2,31 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>WeatherApp</title>
+  <title>Freecodecamp Weather App</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta itemprop="name" content="Freecodecamp Weather App">
+  <meta itemprop="description" content="A partial fulfillment for the requirement of Freecodecamp projects.">
+  <meta name="description" content="A partial fulfillment for the requirement of Freecodecamp projects.">
+  <meta itemprop="image" content="https://chpecson-weather.surge.sh/preview.png">
+  <link rel="canonical" href="https://chpecson-weather.surge.sh">
+  <meta property="og:title" content="Freecodecamp Weather App">
+  <meta property="og:description" content="A partial fulfillment for the requirement of Freecodecamp projects.">
+  <meta property="og:image" content="https://chpecson-weather.surge.sh/preview.png">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
   <app-root>Loading...</app-root>
+  <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+    ga('create', 'UA-96124419-1', 'auto');
+    ga('send', 'pageview');
+
+  </script>
 </body>
 </html>
